--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,33 @@
 /libziparchive/testdata/dummy-update.zip filter=lfs diff=lfs merge=lfs -text
 /liblog/tests/liblog_test.cpp filter=lfs diff=lfs merge=lfs -text
 /libbacktrace/testdata/arm/libart.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/straddle_arm32/libc.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/straddle_arm64/libunwindstack_test filter=lfs diff=lfs merge=lfs -text
+/libbacktrace/testdata/arm/libandroid_runtime.so filter=lfs diff=lfs merge=lfs -text
+/libbacktrace/testdata/arm/libGLESv2_adreno.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/gnu_debugdata_arm32/libandroid_runtime.so filter=lfs diff=lfs merge=lfs -text
+/libbacktrace/testdata/arm64/libskia.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_x86_32/dalvikvm32 filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_x86_32/libartd.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_x86_32/libarttestd.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_arm32/libart.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_arm32/libartd.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_arm32/libarttestd.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/bad_eh_frame_hdr_arm64/libc.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/gnu_debugdata_arm/libandroid_runtime.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_arm/libart.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_arm/libartd.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_arm/libarttestd.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_x86/dalvikvm32 filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_x86/libartd.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_debug_x86/libarttestd.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/straddle_arm/libc.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/art_quick_osr_stub_arm/libart.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/art_quick_osr_stub_arm/libc.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_map_arm/libart.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/jit_map_arm/libc.so filter=lfs diff=lfs merge=lfs -text
+/libprocinfo/testdata/maps filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/offset_arm/libc.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/offset_arm/libunwindstack_test filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/debug_frame_load_bias_arm/libbinder.so filter=lfs diff=lfs merge=lfs -text
+/libunwindstack/tests/files/offline/debug_frame_load_bias_arm/libc.so filter=lfs diff=lfs merge=lfs -text
