--- a/.gitattributes
+++ b/.gitattributes
@@ -45,3 +45,4 @@
 /libunwindstack/tests/files/offline/shared_lib_in_apk_memory_only_arm64/lib_mem.data filter=lfs diff=lfs merge=lfs -text
 /libunwindstack/tests/files/offline/shared_lib_in_apk_memory_only_arm64/libc.so filter=lfs diff=lfs merge=lfs -text
 /libunwindstack/tests/files/offline/shared_lib_in_apk_memory_only_arm64/linker64 filter=lfs diff=lfs merge=lfs -text
+/libmeminfo/testdata1/vmallocinfo filter=lfs diff=lfs merge=lfs -text
